
02052004 (v2.3.3)  -** stable release **-
	- note: verified to compile ok with gcc-3.4
	- added: eiam - 'map-ladspa-id-list' command
	- added: special-case value of '-1' to 'cs-set-length' or
		 '-t:xxx' will set the chainsetup length according
		 to the longest input object
	- added: ECI guide - a new section on ecasound.el [mlang]
	- changed: lots of typo fixes and other corrections to 
	           the user's guide [ericdr]
	- changed: minor configure.in cleanup relating to handling
		   CFLAGS, CXXFLAGS and LDFLAGS
	- fixed: building against libsndfile-1.0.4 and older; if 
		 libsndfile older than 1.0.0 is detected, sndfile 
		 support is disabled altogether
	- fixed: bug in ECI C impl that could cause segfaults [mewe]
	- fixed: signal handling bugs in ecasignalview and ECI C
	         impl [mewe]
	- fixed: bug in ecasound(1) caused man to not show the
		 last three pages
	- fixed: bug in the daemon-mode (NetECI) protocol parser
		 that caused parsing long (over 32 chars) commands 
		 to fail
	- fixed: 'libecasound-config --libs' did not list all 
		 external libraries used
	- fixed: assign default param-names to effect presets 
	- fixed: preset parameters were not saved by 'cs-save' and
		 'cs-save-as'
06122003 (v2.3.2)  -** stable release **-
	- edi-entries: edi-33 closed
	- added: support for libsndfile; enabled if libsndfile is
	         detected succesfully by configure; can be disabled
		 with --disable-sndfile
	- added: added new audio input/output types 'audiofile', 
		 'sndfile' and 'mikmod'; see ecasound(1) for more
		 details
	- added: pyecasound/test2_stresstest.py new test case 
	- added: initial Ruby ECI impl added; see rubyecasound/README 
		 for details [janweil]
	- added: --enable-rubyecasound configure option; defaults to
		 yes if ruby interpreter found on the system
	- added: resampling examples to Documentation/examples.html
	- changed: increased default buffer sizes for 'rtnull' objects 